# quoteflix-api

./: .dockerignore  .env.example  .env.test  .flake8  .gitignore  .insomnia.json  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  backlog  docker-compose.local.yaml  docker-compose.override.yaml  docker-compose.prod.yaml  docker-compose.tests.yaml  docker-compose.traefik.yaml  docker-compose.yaml  mypy.ini  pyproject.toml  tasks.py
.github/workflows/: build_and_test.yaml  deploy_to_dev.yaml  push_to_registry.yaml
api/: main.py
app/: main.py
app/alembic/: env.py
app/alembic/versions/: 11bd16767b19_update_phraseissue_model.py  27de525a20ff_update_phraseissue_model.py  4121b6d31b89_initial.py  4c3797e22c6f_wip.py  4f6d735a7d73_update_phraseissue_model.py  5075c81f5ddc_update_phraseissue_model.py  56fba2fbfbd8_update_basemodel.py  57e34e451984_create_index_for_column_normalized_text.py  6036ee9945b3_update_phraseissue_model.py  64b2a799d0b4_initial.py  91ad43a14d24_add_phrase_issue_report_model.py  98ed99d8d593_update_user_model.py  99d2a4ff3726_update_phraseissue_model.py  9f15ee426e00_add_phrase_issue_report_model.py  a402d82f686d_update_phraseissue_model.py  aacca5ec4785_update_phraseissue_model.py  bcbd707a407a_initial.py  c3c504729762_add_movie_model.py  c6c34c1d23f2_initial.py  e78d544326b6_remove_username_field.py  fe1340f3727d_initial.py
app/api/: dependencies.py
app/api/analytics/: dependencies.py  router.py  schemas.py  service.py  utils.py
app/api/issues/: dependencies.py  models.py  repository.py  router.py  service.py
app/api/movies/: admin.py  constants.py  dependencies.py  models.py  repository.py  router.py  schemas.py  service.py
app/api/phrases/: admin.py  dependencies.py  models.py  repository.py  router.py  scenes_upload_service.py  schemas.py  service.py  utils.py
app/api/users/: backend.py  dependencies.py  manager.py  models.py  permissions.py  router.py  schemas.py
app/core/: admin_auth.py  cache_key_builder.py  config.py  constants.py  database.py  dependencies.py  exceptions.py  models.py  presigned_url_service.py  s3_service.py  validators.py
app/helpers/: create_scenes.py  shift_subtitles.py
app/s3/: dependencies.py  presigned_url_service.py  s3_service.py
app/tests/: conftest.py  test_movies_repository.py  test_movies_router.py  test_movies_service.py  test_phrase_utils.py  test_phrases_repository.py  test_phrases_router.py  test_phrases_service.py  test_presigned_url_service.py  test_s3_service.py  test_scenes_upload_service.py
app/tests/api/phrases/: test_phrases_repository.py  test_phrases_router.py  test_phrases_service.py  test_phrases_utils.py  test_scenes_upload_service.py
app/tests/data/: subtitles.srt
app/tests/integration/: test_movies_repository.py  test_movies_router.py  test_phrases_repository.py  test_phrases_router.py  test_s3_service.py  test_scenes_upload_service.py
app/tests/s3/: test_presigned_url_service.py  test_s3_service.py
app/tests/unit/: test_phrases_service.py  test_phrases_utils.py  test_presigned_url_service.py
github/workflows/: build_and_test.yaml
helpers/: create_scenes.py
scripts/: prestart.sh  start-reload.sh  start.sh
third_part_configs/: .insomnia.json
