[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry]
authors = ["Aleksandr Sosedskyi <sanya1sosedskiy@gmail.com>"]
description = "The API for Quoteflix platform"
name = "app"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
alembic = "1.13.1"
asyncpg = "0.29.0"
fastapi = "0.110.0"
fastapi-users = {extras = ["sqlalchemy"], version = "13.0.0"}
humanize = "4.9.0"
pydantic-settings = "2.2.1"
python = "^3.12"
python-multipart = "0.0.9"
ruff = "0.3.4"
sqlalchemy = "2.0.29"
uvicorn = "0.29.0"
invoke = "2.2.0"
pytest-asyncio = "0.23.6"
httpx = "0.27.0"
pytest-cov = "5.0.0"
aioboto3 = "12.3.0"
types-aioboto3 = "12.3.0"

[tool.poetry.group.dev.dependencies]
mypy = "1.9.0"
pre-commit = "3.7.0"
pytest = "8.1.1"
