[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry]
authors = ["Aleksandr Sosedskyi <susidskyi@gmail.com>"]
description = "The API for FlickPhrase platform"
name = "app"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
alembic = "1.13.1"
asyncpg = "0.29.0"
fastapi = "0.111.0"
fastapi-users = {extras = ["sqlalchemy"], version = "13.0.0"}
humanize = "4.9.0"
pydantic-settings = "2.3.1"
python = "^3.12"
python-multipart = "0.0.9"
sqlalchemy = {extras = ["full"], version = "^2.0.30"}
uvicorn = "0.30.1"
httpx = "0.27.0"
aioboto3 = "13.0.1"
srt = "3.5.3"
types-aiobotocore-s3 = "2.13.0"
aiofiles = "23.2.1"

logfire = {version = "0.41.0", extras=["fastapi"]}
fastapi-cache2 = {extras = ["redis"], version = "0.2.1"}
fastapi-pagination = "0.12.25"
sqladmin = {extras = ["full"], version = "0.17.0"}

[tool.poetry.group.dev.dependencies]
mypy = "1.10.0"
pre-commit = "3.7.1"
ruff = "0.4.8"
invoke = "2.2.0"
types-redis = "4.6.0.20240425"
types-aioboto3 = "13.0.1"
types-aiofiles = "23.2.0.20240403"
click = "8.1.7"

[tool.poetry.group.test.dependencies]
pytest = "8.2.2"
pytest-asyncio = "0.23.7"
pytest-cov = "5.0.0"
pytest-mock = "3.14.0"
moto = {version = "5.0.9", extras = ["s3", "server"]}
fastapi-cache2 = {extras = ["memcached", "redis"], version = "0.2.1"}

# Pytest
[tool.pytest.ini_options]
console_output_style = "progress"


# Mypy
[tool.mypy]
strict = true
plugins = [
    "pydantic.mypy",
    "sqlalchemy.ext.mypy.plugin",
]

[[tool.mypy.overrides]]
module = "asyncpg.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "srt.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "app.tests.*",
    "app.alembic.*",
]
ignore_errors = true


# Ruff
[tool.ruff]
line-length = 119
unsafe-fixes = true

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "N", # pep8-naming
    "ANN", # flake8-annotations
    "ASYNC", # flake8-async
    "S", # flake8-bandit
    "B", # flake8-bugbear
    "COM", # flake8-commas
    "C4", # flake8-comprehensions
    "PT", # flake8-pytest-style
    "RET", # flake8-return
    "SIM", # flake8-simplify
    "ARG", # flake8-unused-arguments
    "PL", # Pylint error
    "RUF", # Ruff error
    "UP", # PyUpgrade
]
ignore = [
    "ANN101", # Missing type annotation for self in method
    "ANN102", # Missing type annotation for cls in classmethod
    "PLR0913", # Too many arguments
    "S603", # `subprocess` call: check for execution of untrusted input
]

[tool.ruff.lint.flake8-bugbear]
# Allow default arguments like, e.g., `data: List[str] = fastapi.Query(None)`.
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.ruff.lint.extend-per-file-ignores]
"app/tests/*" = [
    "S101", # Use of `assert` detected
    "ANN201", # Missing return type annotation for public function
    "ARG002", # Unused function argument
    "ARG001", # Unused function argument
    "PLR2004", # Magic value used in comparison, consider replacing ` ` with a constant variable
    "S105", # Possible hardcoded password assigned to: "{}"	
    "S106", # Possible hardcoded password assigned to argument: "{}"	
]
"tasks.py"= ["ALL"]
"admin.py" = [
    "RUF012", # Mutable class attributes should be annotated with `typing.ClassVar`
]
"admin_auth.py" = [
    "RUF015", # Prefer `next(item async for item in get_user_manager())` over single element sliceRuffRUF015
]